# embedded-cmake-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
App/Inc/: main.h
App/Src/: main.c
BSP/: .clang-tidy
BSP/Inc/: stm_init.h
BSP/Src/: init_stm32l4.c
BSP/board/: CMakeLists.txt
BSP/board/inc/: board_init.h  communication.h
BSP/board/stm32l4xx/inc/: init_stm32l4.h
BSP/board/stm32l4xx/src/: init_stm32l4.c
BSP/network/: CMakeLists.txt
BSP/network/inc/: network_module.h
BSP/network/src/: network_esp12at.c
app/inc/: main.h
app/src/: main.c
bsp/board/: CMakeLists.txt
bsp/board/include/: basic_operations.h
bsp/board/linux_amd64/src/: basic_operations.c  init_board.c
bsp/board/stm32l4xx/: CMakeLists.txt
bsp/board/stm32l4xx/include/: interruptions.h
bsp/board/stm32l4xx/src/: init_board.c  interruptions.c
drivers/: CMakeLists.txt  startup_stm32l432xx.s
drivers/Inc/: stm32l4xx_iface.h  stm32l4xx_it.h
drivers/Src/: stm32l4xx_hal_msp.c  stm32l4xx_iface.c  stm32l4xx_it.c
